gpu-check-k1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-check-k1
spec:
  nodeName: kubernetes1
  containers:
  - name: check
    image: alpine
    command: ["sh", "-c", "apk add pciutils && lspci"]
    securityContext:
      privileged: true
  restartPolicy: Never
