gpu-check-nuc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-check-nuc
spec:
  nodeName: nuc
  containers:
  - name: check
    image: alpine
    command: ["sh", "-c", "apk add pciutils && lspci"]
    securityContext:
      privileged: true
  restartPolicy: Never
